# nemo

./: .gitignore  README.md  pyproject.toml
platform/: app.py
src/evaluation/: gnn_eval.py
src/ingestion/: ingest_economic.py
src/training/: generate_embeddings.py  gnn.py  semantic_2.py
