[project]
name = "nemo"
version = "0.1.0"
description = ""
authors = [
    {name = "Dar-rius",email = "mohamedtine17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
[tool.poetry.dependencies]
python = "^3.10"
py2neo = ">=2021.2.4,<2022.0.0"
networkx = "2.6.3"  # Note : la version 2.6 exacte a été retirée (yanked), préférez 2.6.3
seaborn = ">=0.13.2,<0.14.0"
numpy = "1.22.4"
pandas = "1.3.5"
karateclub = "1.3.3" 
streamlit = "1.20.0"
torch-geometric = "^2.5.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
